--- a/src/components/layout/common.css
+++ b/src/components/layout/common.css
@@ -103,9 +103,15 @@ body{
     height: 56px;
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
     line-height: 1;
-    font-size: 36px;
     position: relative;
     cursor: pointer;
+    font-size: 20px;
+    margin-bottom: 10px;
+    margin-right: 15px;
+}
+
+.btn-round i{
+    margin-top: 18px;
 }
 
 .btn-round span {
