--- a/src/components/layout/common.css
+++ b/src/components/layout/common.css
@@ -27,6 +27,19 @@ body{
     color: #aeaeae;
 }
 
+.danger{
+    color: red;
+}
+
+.wordwrap{
+    display:block;
+    word-wrap:break-word;
+}
+
+.font-medium-size{
+    font-size: 18px;
+}
+
 .mg-top-0{
     margin-top: 0;
 }
