--- a/src/components/layout/common.css
+++ b/src/components/layout/common.css
@@ -242,3 +242,7 @@ input[type=submit]:disabled {
     display:block;
     word-break:break-all
 }
+
+.vertical-center{
+    vertical-align: middle;
+}
