--- a/src/components/layout/common.css
+++ b/src/components/layout/common.css
@@ -255,4 +255,7 @@ input[type=submit]:disabled {
     .boxed-background {
         padding: 15px;
     }
+    .boxed{
+        margin-left: 15px;
+    }
 }
