--- a/src/assets/common.css
+++ b/src/assets/common.css
@@ -244,12 +244,7 @@ input[type=submit]:disabled {
 }
 
 
-@media (max-width: 767px) {
-    .boxed-background {
-        padding: 15px;
-    }
 
-}
 
 .hide-tablet{
 
@@ -259,6 +254,61 @@ input[type=submit]:disabled {
 
 }
 
+.badge {
+    box-sizing: border-box;
+    display: inline-block;
+    background-color: #2c3e50;
+    color: #ffffff;
+
+    border-radius: 3rem;
+    text-align: center;
+
+    min-width: 10px;
+    font-size: 1.6rem;
+    font-weight: 400;
+    padding: .05rem .8rem .1rem;
+    line-height: inherit;
+}
+
+.badge-line {
+    background-color: transparent;
+    color: #95a5a6;
+    box-shadow: 0 0 0 1px #95a5a6;
+}
+
+.badge-small {
+   font-size: 1.2rem;
+   padding: .1rem .65rem .2rem;
+}
+
+.badge-smaller {
+    font-size: .7rem;
+    padding: .05rem .4rem .15rem;
+}
+
+.badge-info {
+    background-color: #3498db;
+}
+
+.badge-warning {
+    background-color: #f1c40f;
+}
+
+.badge-danger {
+    background-color: #e74c3c;
+}
+
+.badge-success {
+    background-color: #2ecc71;
+}
+
+
+@media (max-width: 767px) {
+    .boxed-background {
+        padding: 15px;
+    }
+
+}
 
 @media (min-width: 481px) and (max-width: 767px) {
 
@@ -274,3 +324,4 @@ input[type=submit]:disabled {
         display: none !important;
     }
 }
+
