--- a/src/assets/common.css
+++ b/src/assets/common.css
@@ -192,6 +192,11 @@ input[type=submit] {
     cursor: pointer;
 }
 
+button{
+    padding-left: 0;
+    padding-right: 0;
+}
+
 button:hover,
 input[type=submit]:hover {
     background-color: #45a049;
