--- a/src/assets/common.css
+++ b/src/assets/common.css
@@ -192,11 +192,6 @@ input[type=submit] {
     cursor: pointer;
 }
 
-button{
-    padding-left: 0;
-    padding-right: 0;
-}
-
 button:hover,
 input[type=submit]:hover {
     background-color: #45a049;
@@ -272,6 +267,9 @@ input[type=submit]:disabled {
     background-color: #2ecc71;
 }
 
+.button-width-inherit{
+    width: inherit !important;
+}
 
 @media (max-width: 767px) {
 
