--- a/src/assets/common.css
+++ b/src/assets/common.css
@@ -277,6 +277,39 @@ input[type=submit]:disabled {
     width: inherit !important;
 }
 
+/**
+    PROGRESS BAR
+ */
+
+.progress {
+    padding:0;
+    width:90%;
+    height:30px;
+    overflow:hidden;
+    background:#e5e5e5;
+    border-radius:6px;
+}
+
+.bar {
+    position:relative;
+    float:left;
+    min-width:1%;
+    height:100%;
+    background:cornflowerblue;
+}
+
+.percent {
+    position:absolute;
+    top:50%;
+    left:50%;
+    transform:translate(-50%,-50%);
+    margin:0;
+    font-family:tahoma,arial,helvetica;
+    font-size:12px;
+    color:white;
+}
+
 @media (max-width: 767px) {
 
 }
+
