--- a/src/assets/common.css
+++ b/src/assets/common.css
@@ -11,6 +11,10 @@ body{
     background-color: #fafafa;
 }
 
+h1,h2,h3,h4,h5,h6,span{
+    display: block;
+}
+
 .link, a:link,a:visited {
     color: #0000A0;
     text-decoration: none;
