wallet css improved overall

--- a/src/assets/common.css
+++ b/src/assets/common.css
@@ -38,8 +38,10 @@ h1,h2,h3,h4,h5,h6,span{
 }
 
 .disabled,
-i[disabled]{
-    color: #aeaeae;
+i[disabled],
+a[disabled]{
+    color: #aeaeae !important;
+    pointer-events: none;
 }
 
 .danger{
