--- a/src/assets/common.css
+++ b/src/assets/common.css
@@ -37,6 +37,11 @@ h1,h2,h3,h4,h5,h6,span{
     padding: 10px;
 }
 
+.blurry-text {
+    text-shadow: 0 0 15px black;
+    color: transparent;
+}
+
 .disabled,
 i[disabled],
 a[disabled]{
