--- a/src/assets/common.css
+++ b/src/assets/common.css
@@ -42,6 +42,10 @@ h1,h2,h3,h4,h5,h6,span{
     color: transparent;
 }
 
+.disabled-color{
+    color: #aeaeae !important;
+}
+
 .disabled,
 i[disabled],
 a[disabled]{
