--- a/src/assets/common.css
+++ b/src/assets/common.css
@@ -30,7 +30,7 @@ Scrollbar
     overflow-x: hidden;
     overflow-y: auto;
     text-align: center;
-    max-height: 300px
+    max-height: 10rem
 }
 
 /**
