--- a/src/assets/common.css
+++ b/src/assets/common.css
@@ -160,7 +160,7 @@ a, a:hover,a:visited, a:focus {
     text-decoration:none;
 }
 
-@media (min-width: 576px) {
+@media (min-width: 576px) and (max-width: 1200px) {
     .container{
         max-width: 100%;
     }
