refactor many UI elements

--- a/src/assets/common.css
+++ b/src/assets/common.css
@@ -225,6 +225,10 @@ a .disabled{
     cursor: pointer;
 }
 
+.pointer:hover{
+    color: #27bcfd !important;
+}
+
 a, a:hover,a:visited, a:focus {
     text-decoration:none;
 }
