--- a/src/assets/common.css
+++ b/src/assets/common.css
@@ -58,102 +58,19 @@ Scrollbar
 /**
     ToolTip
  */
-
-
-.tooltip {
-    display: block !important;
+.v-popper--theme-tooltip{
     z-index: 10000;
-    font-size: 0.8rem
 }
 
-.tooltip .tooltip-inner {
+.v-popper__inner{
+    background: rgba(0,0,0,.9) !important;
+    word-break:break-all;
+    max-width: 300px;
+    display: block !important;
     background: black;
     color: white;
-    border-radius: 8px;
-    padding: 5px 10px 4px;
-}
-
-.tooltip .tooltip-arrow {
-    width: 0;
-    height: 0;
-    border-style: solid;
-    position: absolute;
-    margin: 5px;
-    border-color: black;
-    z-index: 1;
-    font-size: 8px;
-}
-
-.tooltip[x-placement^="top"] {
-    margin-bottom: 5px;
-}
-
-.tooltip[x-placement^="top"] .tooltip-arrow {
-    border-width: 5px 5px 0 5px;
-    border-left-color: transparent !important;
-    border-right-color: transparent !important;
-    border-bottom-color: transparent !important;
-    bottom: -5px;
-    left: calc(50% - 5px);
-    margin-top: 0;
-    margin-bottom: 0;
-}
-
-.tooltip[x-placement^="bottom"] {
-    margin-top: 5px;
-}
-
-.tooltip[x-placement^="bottom"] .tooltip-arrow {
-    border-width: 0 5px 5px 5px;
-    border-left-color: transparent !important;
-    border-right-color: transparent !important;
-    border-top-color: transparent !important;
-    top: -5px;
-    left: calc(50% - 5px);
-    margin-top: 0;
-    margin-bottom: 0;
-}
-
-.tooltip[x-placement^="right"] {
-    margin-left: 5px;
-}
-
-.tooltip[x-placement^="right"] .tooltip-arrow {
-    border-width: 5px 5px 5px 0;
-    border-left-color: transparent !important;
-    border-top-color: transparent !important;
-    border-bottom-color: transparent !important;
-    left: -5px;
-    top: calc(50% - 5px);
-    margin-left: 0;
-    margin-right: 0;
-}
-
-.tooltip[x-placement^="left"] {
-    margin-right: 5px;
-}
-
-.tooltip[x-placement^="left"] .tooltip-arrow {
-    border-width: 5px 0 5px 5px;
-    border-top-color: transparent !important;
-    border-right-color: transparent !important;
-    border-bottom-color: transparent !important;
-    right: -5px;
-    top: calc(50% - 5px);
-    margin-left: 0;
-    margin-right: 0;
-}
-
-.tooltip.popover .popover-inner {
-    background: #f9f9f9;
-    color: black;
-    padding: 24px;
-    border-radius: 5px;
-    box-shadow: 0 5px 30px rgba(black, .1);
-}
-
-.tooltip.popover .popover-arrow {
-    border-color: #f9f9f9;
+    font-size: 0.7rem;
+    padding: 5px 5px 5px !important;
 }
 
 .unselectable {
